...
    public static let playbackProgress: LocalizedStringResource = "Playback progress"
    public static let playing: LocalizedStringResource = "Playing"
    public static let previousTrack: LocalizedStringResource = "Previous track"
    public static let queue: LocalizedStringResource = "Queue"
    public static let recentlyPlayed: LocalizedStringResource = "Recently Played"
    public static let repeatLabel: LocalizedStringResource = "Repeat"
    public static let search: LocalizedStringResource = "Search"
    public static let searchForSongs: LocalizedStringResource = "Search for songs"
    public static let skipBackward5: LocalizedStringResource = "Skip backward 5 seconds"
    public static let skipForward5: LocalizedStringResource = "Skip forward 5 seconds"
    public static let songs: LocalizedStringResource = "Songs"
    public static let tryAgain: LocalizedStringResource = "Try Again"
    public static let unableToLoad: LocalizedStringResource = "Unable to Load"
    public static let viewAlbum: LocalizedStringResource = "View album"

    public static let metadataSeparator = "·"

...
